--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 futures-util = "0.3.28"
 nom = "7.1.3"
+thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
+tracing = "0.1.39"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
