--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "AGPL-3.0-or-later"
 [dependencies]
 async-trait = "0.1.74"
 bollard = "0.15.0"
+color-eyre = "0.6.2"
 nom = "7.1.3"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
